name:                poly
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
                     Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable poly
  build-depends:
      base          >= 4.8
    , pretty        >= 1.1
    , parsec        >= 3.1
    , text          >= 1.2
    , containers    >= 0.5
    , mtl           >= 2.2
    , transformers  >= 0.3.0
    , repline       >= 0.1.2.0 && <0.2
    , pretty-simple

  other-modules:
    Assumption
    Env
    Eval
    Infer
    Lexer
    Parser
    Pretty
    Syntax
    Type

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options: -Wincomplete-patterns -Wincomplete-uni-patterns
